logs/tornado-utils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado_utils'...
Compiling './lib/python3.5/site-packages/tornado_utils/goo_gl.py'...
***   File "./lib/python3.5/site-packages/tornado_utils/goo_gl.py", line 28
    print shorten(url)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tornado_utils/send_mail'...
Listing './lib/python3.5/site-packages/tornado_utils/send_mail/backends'...
Compiling './lib/python3.5/site-packages/tornado_utils/send_mail/backends/pickle.py'...
***   File "./lib/python3.5/site-packages/tornado_utils/send_mail/backends/pickle.py", line 15
    print "Create a file called 'send_mail_config.py' and copy from 'config.py-dist'"
                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tornado_utils/send_mail/backends/smtp.py'...
***   File "./lib/python3.5/site-packages/tornado_utils/send_mail/backends/smtp.py", line 14
    print "Create a file called 'send_mail_config.py' and copy from 'config.py-dist'"
                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tornado_utils/send_mail/send_email.py'...
***   File "./lib/python3.5/site-packages/tornado_utils/send_mail/send_email.py", line 374
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tornado_utils/tests'...
Compiling './lib/python3.5/site-packages/tornado_utils/thumbnailer.py'...
***   File "./lib/python3.5/site-packages/tornado_utils/thumbnailer.py", line 9
    def get_thumbnail(save_path, image_data, (max_width, max_height),
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tornado_utils/tornado_static.py'...
***   File "./lib/python3.5/site-packages/tornado_utils/tornado_static.py", line 287
    print "Closure took", round(t1 - t0, 4),
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tornado_utils-1.6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
